# EdgeAgent

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
categorize/: .gitignore  __init__.py  analysis.ipynb  compare.py  config.py  main.py  major_piechart_pdf_generator.py  models.py  pipeline.py  requirements.txt  taxonomy.py  visualize.py
categorize/classifiers/: __init__.py  base.py  keyword_classifier.py  llm_classifier.py
config/: subagent_test.yaml  system.yaml  tools.yaml  tools_3tier.yaml  tools_docker.yaml  tools_hybrid.yaml  tools_knative.yaml  tools_knative_cloud.yaml  tools_knative_edge.yaml  tools_scenario1.yaml  tools_scenario1_edge.yaml  tools_scenario2.yaml  tools_scenario2_edge.yaml  tools_scenario3.yaml  tools_scenario3_edge.yaml  tools_scenario4.yaml  tools_scenario4_edge.yaml  tools_test.yaml
docker/: .dockerignore
docker/mcp-official/: Dockerfile.filesystem  Dockerfile.git  Dockerfile.sequentialthinking  Dockerfile.time  build-all.sh
docker/mcp-servers/: Dockerfile.base  Dockerfile.data-aggregate  Dockerfile.fetch  Dockerfile.filesystem  Dockerfile.image-resize  Dockerfile.log-parser  Dockerfile.summarize
docker/registry/: docker-compose.registry-local.yml  docker-compose.registry.yml  nginx.conf  setup-https-dns.sh  setup-https-registry.sh  setup-registry.sh
docker/subagent/: Dockerfile
docker/wasm/: Dockerfile.data-aggregate  Dockerfile.fetch  Dockerfile.filesystem  Dockerfile.git  Dockerfile.image-resize  Dockerfile.log-parser  Dockerfile.sequential-thinking  Dockerfile.summarize  Dockerfile.time
edgeagent/: __init__.py  metrics.py  middleware.py  orchestrator.py  paths.py  planner.py  profiles.py  proxy_tool.py  registry.py  scenario_runner.py  scheduler.py  scoring.py  subagent.py  types.py  validation.py
examples/: 01_multi_location_routing.py  02_routing_simple.py  03_proxy_tool_structure.py  04_constraint_routing.py  05_llm_agent_integration.py
examples/legacy/: 00_verify_langchain_basic.py  01_verify_mcp_adapter.py  02_verify_multi_location.py  (+2 more)
k8s/: secrets.yaml
scripts/: agent_utils.py  cleanup-ecr.sh  compare_all_scenarios.py  compare_schedulers.py  download_public_datasets.py  generate_test_images.py  generate_test_logs.py  generate_test_repo.py  mock_mcp_server.py  push-to-ecr.sh  push-to-registry.sh  push-wasm-images.sh  run_all_scenarios.py  run_scenario01_agent.py  run_scenario01_orchestrated.py  run_scenario01_with_metrics.py  run_scenario02_agent.py  run_scenario02_orchestrated.py  run_scenario02_with_metrics.py  run_scenario03_agent.py  run_scenario03_orchestrated.py  run_scenario03_with_metrics.py  run_scenario04_agent.py  run_scenario04_orchestrated.py  run_scenario04_with_metrics.py  run_scenario1_agent.py  run_scenario1_orchestrated.py  run_scenario1_script.py  run_scenario1_subagent.py  run_scenario1_with_metrics.py  run_scenario2_agent.py  run_scenario2_orchestrated.py  run_scenario2_script.py  run_scenario2_subagent.py  run_scenario2_with_metrics.py  run_scenario3_agent.py  run_scenario3_orchestrated.py  run_scenario3_script.py  run_scenario3_subagent.py  run_scenario3_with_metrics.py  (+18 more)
servers/: __init__.py  data_aggregate_server.py  fetch_server.py  filesystem_server.py  git_server_patched.py  image_resize_server.py  log_parser_server.py  summarize_server.py  timing.py
tests/: __init__.py  conftest.py  test_routing_e2e.py  test_scheduler.py
wasm_mcp/: Cargo.toml  NETWORK_IO_SEPARATION_CHANGES.md  README.md  test_mcp.sh
wasm_mcp/scripts/: build_all.sh  build_server.sh  run_server.sh
wasm_mcp/servers/data-aggregate/: Cargo.toml
wasm_mcp/servers/data-aggregate-http/: Cargo.toml
wasm_mcp/servers/data-aggregate-http/src/: lib.rs
wasm_mcp/servers/data-aggregate/src/: lib.rs  service.rs  tools.rs
wasm_mcp/servers/fetch/: Cargo.toml
wasm_mcp/servers/fetch-http/: Cargo.toml
wasm_mcp/servers/fetch-http/src/: lib.rs
wasm_mcp/servers/fetch/src/: lib.rs  service.rs  tools.rs
wasm_mcp/servers/filesystem/: Cargo.toml
wasm_mcp/servers/filesystem-http/: Cargo.toml
wasm_mcp/servers/filesystem-http/src/: lib.rs
wasm_mcp/servers/filesystem/src/: lib.rs  service.rs  tools.rs
wasm_mcp/servers/git/: Cargo.toml
wasm_mcp/servers/git-http/: Cargo.toml
wasm_mcp/servers/git-http/src/: lib.rs
wasm_mcp/servers/git/src/: lib.rs  service.rs  tools.rs
wasm_mcp/servers/image-resize/: Cargo.toml
wasm_mcp/servers/image-resize-http/: Cargo.toml
wasm_mcp/servers/image-resize-http/src/: lib.rs
wasm_mcp/servers/image-resize/src/: lib.rs  service.rs  tools.rs
wasm_mcp/servers/log-parser/: Cargo.toml
wasm_mcp/servers/log-parser-http/: Cargo.toml
wasm_mcp/servers/log-parser-http/src/: lib.rs
wasm_mcp/servers/log-parser/src/: lib.rs  service.rs  tools.rs
wasm_mcp/servers/sequential-thinking/: Cargo.toml
wasm_mcp/servers/sequential-thinking-http/: Cargo.toml
wasm_mcp/servers/sequential-thinking-http/src/: lib.rs
wasm_mcp/servers/sequential-thinking/src/: lib.rs  service.rs  tools.rs
wasm_mcp/servers/summarize/: Cargo.toml
wasm_mcp/servers/summarize-http/: Cargo.toml
wasm_mcp/servers/summarize-http/src/: lib.rs
wasm_mcp/servers/summarize/src/: lib.rs  service.rs  tools.rs
wasm_mcp/servers/time/: Cargo.toml
wasm_mcp/servers/time-http/: Cargo.toml
wasm_mcp/servers/time-http/src/: lib.rs
wasm_mcp/servers/time/src/: lib.rs  service.rs  tools.rs
wasm_mcp/shared/: Cargo.toml
wasm_mcp/shared/src/: lib.rs
wasm_mcp/tests/: compare_data_aggregate.py  compare_fetch.py  compare_filesystem.py  compare_git.py  compare_image_resize.py  compare_log_parser.py  compare_sequential_thinking.py  compare_summarize.py  compare_time.py  mcp_comparator.py  test_http_langchain.py  test_langchain_integration.py
wasm_mcp/wasmmcp/: Cargo.toml
wasm_mcp/wasmmcp-macros/: Cargo.toml
wasm_mcp/wasmmcp-macros/src/: lib.rs
wasm_mcp/wasmmcp/src/: builder.rs  lib.rs  registry.rs  server.rs  timing.rs
wasm_mcp/wasmmcp/src/protocol/: jsonrpc.rs  mod.rs
wasm_mcp/wasmmcp/src/transport/: http.rs  mod.rs  stdio.rs
(+54 files in other folders)
