[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgeagent"
version = "0.1.0"
description = "LangChain MCP Scheduling Middleware for Edge-Cloud Continuum"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "mcp>=1.0.0",
    "fastmcp>=0.4.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

scenarios = [
    "pillow>=10.0.0",        # Scenario 4: 이미지 처리
    "imagehash>=4.3.0",      # Scenario 4: Perceptual Hash
]

all = [
    "edgeagent[dev,scenarios]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.setuptools.packages.find]
include = ["edgeagent*", "servers*", "experiments*"]
exclude = ["tests*", "data*", "config*"]
