[workspace]
members = [
    "servers/filesystem",
    "servers/time",
    "servers/log-parser",
    "servers/data-aggregate",
    "servers/sequential-thinking",
    "servers/git",
    "servers/fetch",
    "servers/summarize",
    "servers/image-resize",
    "shared",
    "wasmmcp",
    "wasmmcp-macros"
]
# All *-http crates removed - use main crate with http-export feature instead
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "io-util", "sync", "macros", "time"] }
rmcp = { version = "0.10", default-features = false, features = ["server", "macros", "base64"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
schemars = "1"
wasi = "0.14"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
