[package]
name = "wasmmcp"
version = "0.1.0"
edition = "2021"
description = "FastMCP-like framework for building MCP servers in WASM"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
# Core dependencies
tokio = { version = "1", default-features = false, features = ["rt", "io-util", "sync", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
anyhow = "1.0"

# WASI bindings
wasi = "0.14"

# MCP protocol (reuse rmcp internals)
rmcp = { version = "0.10", default-features = false, features = ["server", "macros", "base64"] }

# Macros
wasmmcp-macros = { path = "../wasmmcp-macros" }

[features]
default = ["transport-stdio"]
transport-stdio = []
transport-http = []
