[package]
name = "mcp-server-data-aggregate-http"
version = "0.1.0"
edition = "2021"
description = "Data Aggregate MCP Server with HTTP transport (wasi:http/proxy)"

[lib]
name = "mcp_server_data_aggregate_http"
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasi = { workspace = true }
