[package]
name = "mcp-server-data-aggregate"
version = "0.1.0"
edition = "2021"
description = "Data Aggregate MCP Server (wasi:cli) - Aggregates, merges, and summarizes structured data"

[lib]
name = "mcp_server_data_aggregate"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
wasi = { workspace = true }
wasmmcp = { path = "../../wasmmcp" }
