[package]
name = "mcp-server-data-aggregate"
version = "0.1.0"
edition = "2021"
description = "Data Aggregate MCP Server - Aggregates, merges, and summarizes structured data"

[lib]
name = "mcp_server_data_aggregate"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# Core framework
wasmmcp = { path = "../../wasmmcp" }
wasi = { workspace = true }
# Note: serde/serde_json/schemars needed directly for derive macros
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Only needed for rmcp-service feature (backward compatibility)
tokio = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[features]
# Build options:
#   cargo build --features cli-export    → wasmtime run (stdio)
#   cargo build --features http-export   → wasmtime serve (HTTP)
#   cargo build (no features)            → library only
default = ["cli-export"]
cli-export = []
http-export = []
# Keep rmcp-based service for backward compatibility
rmcp-service = ["tokio", "rmcp", "anyhow"]
