[package]
name = "mcp-server-fetch"
version = "0.1.0"
edition = "2021"
description = "MCP Fetch Server - WASM implementation with wasi:http"

[lib]
name = "mcp_server_fetch"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasmmcp = { path = "../../wasmmcp", default-features = false }
wasi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
url = "2.5"
regex = "1"

tokio = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[features]
default = ["cli-export"]
cli-export = ["wasmmcp/transport-stdio"]
http-export = ["wasmmcp/transport-http"]
rmcp-service = ["tokio", "rmcp", "anyhow"]
