[package]
name = "mcp-server-filesystem"
version = "0.1.0"
edition = "2021"

# Default lib: stdio transport (wasi:cli/run)
[lib]
name = "mcp_server_filesystem"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
schemars = { workspace = true }
wasi = { workspace = true }
wasmmcp = { path = "../../wasmmcp" }

[features]
default = []
