[package]
name = "mcp-server-filesystem"
version = "0.1.0"
edition = "2021"
description = "MCP Filesystem Server - WASM implementation compatible with @modelcontextprotocol/server-filesystem"

[lib]
name = "mcp_server_filesystem"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasmmcp = { path = "../../wasmmcp", default-features = false }
wasi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

tokio = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[features]
default = ["cli-export"]
cli-export = ["wasmmcp/transport-stdio"]
http-export = ["wasmmcp/transport-http"]
rmcp-service = ["tokio", "rmcp", "anyhow"]
