[package]
name = "mcp-server-git-http"
version = "0.1.0"
edition = "2021"
description = "MCP Git Server - HTTP transport (WASM)"

[lib]
name = "mcp_server_git_http"
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasi = { workspace = true }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
