[package]
name = "mcp-server-git"
version = "0.1.0"
edition = "2021"
description = "MCP Git Server - WASM implementation"

[lib]
name = "mcp_server_git"
crate-type = ["cdylib"]

[dependencies]
tokio = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
wasi = { workspace = true }
wasmmcp = { path = "../../wasmmcp" }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
hex = "0.4"
