[package]
name = "mcp-server-git"
version = "0.1.0"
edition = "2021"
description = "MCP Git Server - WASM implementation"

[lib]
name = "mcp_server_git"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasmmcp = { path = "../../wasmmcp", default-features = false }
wasi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
hex = "0.4"

tokio = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[features]
default = ["cli-export"]
cli-export = ["wasmmcp/transport-stdio"]
http-export = ["wasmmcp/transport-http"]
rmcp-service = ["tokio", "rmcp", "anyhow"]
