[package]
name = "mcp-server-image-resize-http"
version = "0.1.0"
edition = "2021"
description = "MCP Image Resize Server - WASM HTTP version"

[lib]
name = "mcp_server_image_resize_http"
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasi = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"
