[package]
name = "mcp-server-image-resize"
version = "0.1.0"
edition = "2021"
description = "MCP Image Resize Server - WASM implementation with image processing"

[lib]
name = "mcp_server_image_resize"
crate-type = ["cdylib"]

[dependencies]
tokio = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
wasi = { workspace = true }
wasmmcp = { path = "../../wasmmcp" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"
