[package]
name = "mcp-server-image-resize"
version = "0.1.0"
edition = "2021"
description = "MCP Image Resize Server - WASM implementation with image processing"

[lib]
name = "mcp_server_image_resize"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasmmcp = { path = "../../wasmmcp", default-features = false }
wasi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"

tokio = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[features]
default = ["cli-export"]
cli-export = ["wasmmcp/transport-stdio"]
http-export = ["wasmmcp/transport-http"]
rmcp-service = ["tokio", "rmcp", "anyhow"]
