[package]
name = "mcp-server-log-parser-http"
version = "0.1.0"
edition = "2021"
description = "Log Parser MCP Server with HTTP transport (wasi:http/proxy)"

[lib]
name = "mcp_server_log_parser_http"
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasi = { workspace = true }
regex = "1.10"
