[package]
name = "mcp-server-log-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcp_server_log_parser"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
schemars = { workspace = true }
wasi = { workspace = true }
wasmmcp = { path = "../../wasmmcp" }
mcp-shared = { path = "../../shared" }
regex = "1.10"

[features]
default = []
