[package]
name = "mcp-server-log-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcp_server_log_parser"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasmmcp = { path = "../../wasmmcp" }
wasi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
regex = "1.10"

tokio = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[features]
default = ["cli-export"]
cli-export = []
http-export = []
rmcp-service = ["tokio", "rmcp", "anyhow"]
