[package]
name = "mcp-server-sequential-thinking"
version = "0.1.0"
edition = "2021"
description = "Sequential Thinking MCP Server - structured thinking process for problem-solving"

[lib]
name = "mcp_server_sequential_thinking"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# Core framework
wasmmcp = { path = "../../wasmmcp", default-features = false }
wasi = { workspace = true }
# Note: serde/serde_json/schemars needed directly for derive macros
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Only needed for rmcp-service feature (backward compatibility)
tokio = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[features]
# Build options:
#   cargo build --features cli-export    → wasmtime run (stdio)
#   cargo build --features http-export   → wasmtime serve (HTTP)
#   cargo build (no features)            → library only
default = ["cli-export"]
cli-export = ["wasmmcp/transport-stdio"]
http-export = ["wasmmcp/transport-http"]
# Keep rmcp-based service for backward compatibility
rmcp-service = ["tokio", "rmcp", "anyhow"]
