[package]
name = "mcp-server-summarize-http"
version = "0.1.0"
edition = "2021"
description = "MCP Summarize Server - WASM HTTP version with LLM API"

[lib]
name = "mcp_server_summarize_http"
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasi = { workspace = true }
