[package]
name = "mcp-server-summarize"
version = "0.1.0"
edition = "2021"
description = "MCP Summarize Server - WASM implementation with LLM API"

[lib]
name = "mcp_server_summarize"
crate-type = ["cdylib"]

[dependencies]
tokio = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
wasi = { workspace = true }
wasmmcp = { path = "../../wasmmcp" }
