[package]
name = "mcp-server-summarize"
version = "0.1.0"
edition = "2021"
description = "MCP Summarize Server - WASM implementation with LLM API"

[lib]
name = "mcp_server_summarize"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasmmcp = { path = "../../wasmmcp" }
wasi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

tokio = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[features]
default = ["cli-export"]
cli-export = []
http-export = []
rmcp-service = ["tokio", "rmcp", "anyhow"]
