[package]
name = "mcp-server-time"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcp_server_time"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
schemars = { workspace = true }
wasi = { workspace = true }
wasmmcp = { path = "../../wasmmcp" }
chrono = "0.4"
chrono-tz = "0.10"

[features]
default = []
